--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ config/secrets.yml
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
 .env
+.env.development
+.env.example
 
 ## Environment normalization:
 /.bundle
